--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: MinecartManiaStation
 main: com.afforess.minecartmaniastation.MinecartManiaStation
-version: 1.08_beta
+version: 1.08
 author: Afforess
 depend: [MinecartManiaCore]
