--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: MinecartManiaStation
 main: com.afforess.minecartmaniastation.MinecartManiaStation
-version: 1.1.1_alpha1
+version: 1.2.0
 author: Afforess
 depend: [MinecartManiaCore]
