--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,13 @@
 			<artifactId>minecartmaniacore</artifactId>
 			<version>1.2.9-SNAPSHOT</version>
 		</dependency>
-		<dependency>
-			<groupId>org.bukkit</groupId>
-			<artifactId>bukkit</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+        
+        <!-- Bukkit -->
+        <dependency>
+            <groupId>org.bukkit</groupId>
+            <artifactId>bukkit</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 
     <!-- Repository locations -->
