--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.afforess</groupId>
 	<artifactId>minecartmaniastations</artifactId>
-	<version>1.2.9-SNAPSHOT</version>
+	<version>2.0-SNAPSHOT</version>
 	<name>Minecart Mania Stations</name>
 	<description>Stations for MM</description>
 
@@ -20,15 +20,22 @@
 		<dependency>
 			<groupId>com.afforess</groupId>
 			<artifactId>minecartmaniacore</artifactId>
-			<version>1.2.9-SNAPSHOT</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
-        
-        <!-- Bukkit -->
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
+
+		<!-- Bukkit -->
+		<dependency>
+			<groupId>org.bukkit</groupId>
+			<artifactId>bukkit</artifactId>
+			<version>1.0.1-R2-7CLAMS-SNAPSHOT</version>
+		</dependency>
+
+		<!-- CraftBukkit -->
+		<dependency>
+			<groupId>org.bukkit</groupId>
+			<artifactId>craftbukkit</artifactId>
+			<version>1.0.1-R2-7CLAMS-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
     <!-- Repository locations -->
