--- a/pom.xml
+++ b/pom.xml
@@ -27,14 +27,14 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.1-R1-7CLAMS-SNAPSHOT</version>
+			<version>1.1-R1-SNAPSHOT</version>
 		</dependency>
 
 		<!-- CraftBukkit -->
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>craftbukkit</artifactId>
-			<version>1.1-R1-7CLAMS-SNAPSHOT</version>
+			<version>1.1-R1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
@@ -44,12 +44,6 @@
 			<id>bukkit-repo</id>
 			<url>http://repo.bukkit.org/artifactory/repo</url>
 		</repository>
-<!-- Never works :/
-		<repository>
-			<id>craftfire-repo</id>
-			<url>http://repo.craftfire.com/repo</url>
-		</repository>
--->
 		
         <!-- For BigBrother integration -->
         <repository>
