--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
     <repositories>
 		<repository>
 			<id>bukkit-repo</id>
-			<url>http://repo.bukkit.org/artifactory/repo</url>
+			<url>http://repo.bukkit.org/artifactory/plugins-release</url>
 		</repository>
 		
         <!-- For BigBrother integration -->
