--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.afforess</groupId>
 	<artifactId>minecartmaniastations</artifactId>
@@ -7,7 +6,7 @@
 	<name>Minecart Mania Stations</name>
 	<description>Stations for MM</description>
 
-	<!-- License -->
+	
 	<licenses>
 		<license>
 			<name>Creative Commons Attribution 3.0 Unported (CC BY 3.0)</name>
@@ -23,14 +22,14 @@
 			<version>2.0-SNAPSHOT</version>
 		</dependency>
 
-		<!-- Bukkit -->
+		
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
 			<version>1.1-R4-SNAPSHOT</version>
 		</dependency>
 
-		<!-- CraftBukkit -->
+		
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>craftbukkit</artifactId>
@@ -38,14 +37,14 @@
 		</dependency>
 	</dependencies>
 
-    <!-- Repository locations -->
+    
     <repositories>
 		<repository>
 			<id>bukkit-repo</id>
 			<url>http://repo.bukkit.org/content/groups/public</url>
 		</repository>
 		
-        <!-- For BigBrother integration -->
+        
         <repository>
             <id>nexisonline-repo</id>
             <url>http://repo.nexisonline.net:8080/nexus/content/groups/public/</url>
@@ -55,7 +54,7 @@
     <build>
         <sourceDirectory>${basedir}/src/</sourceDirectory>
 
-        <!-- Resources -->
+        
         <resources>
             <resource>
                 <targetPath>.</targetPath>
@@ -68,17 +67,17 @@
             </resource>
         </resources>
 
-        <!-- Plugins -->
+        
         <plugins>
 
-            <!-- Compile plugin -->
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
             </plugin>
 
-            <!-- JAR creation plugin -->
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
